get rid of blue borders

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </div>
     <!-- Header -->
-    <div class="flex flex-col h-[20vh] w-[80vw] w-full bg-white bg-white drop-shadow-md border-solid gap-5 fixed z-40 border-2 border-cyan-500">
+    <div class="flex flex-col h-[20vh] w-[80vw] w-full bg-white bg-white drop-shadow-md border-solid gap-5 fixed z-40">
         <div class="flex flex-row h-[8vh] ml-10 items-center border-solid ml-[20vw]">
             <!-- Search bar -->
             <div class="flex items-center gap-2 ">
@@ -98,7 +98,7 @@
     <div class="flex pl-[15vw] pt-[18vh] h-full w-[100vw] bg-[#e2e8f0] font-bold">
         <!-- Content -->
         <div class="ml-5 mt-10 flex gap-10">
-            <div class="border-2 border-cyan-500 w-[65vw]">
+            <div class="w-[65vw]">
                 <!-- Projects -->
                 <p class="text-xl mb-5">Your Projects</p>  
                 <div class="flex">
@@ -178,7 +178,7 @@
                     </div>
                 </div>
             </div>
-            <div class="border-2 border-cyan-500 ">
+            <div class="">
                 <p class="text-xl mb-5">Announcements</p>
                 <div class="flex">
                     <div class="flex flex-col gap-3 rounded bg-white drop-shadow-md p-4">
